with users and filters

--- a/public/search.html
+++ b/public/search.html
@@ -31,7 +31,7 @@
       <input class="form-radio" type="checkbox" name="alcohol" id="alcohol-checkbox">
       <label for="alcohol">Alcohol</label>
 
-      <input class="form-radio" type="checkbox" name="pets" id="pets-checkbox">
+      <input class="form-radio pets" type="checkbox" name="pets" id="pets-checkbox">
       <label for="pets">Pets</label>
 
       <input class="form-radio" type="checkbox" name="host" id="host-checkbox">
@@ -76,7 +76,7 @@
           <option value=3>
     </datalist>
 
-    <button type="button" class="btn btn-secondary">Find Roomies</button>
+    <button type="button" class="btn btn-secondary findBtn ">Find Roomies</button>
   </div>
   <div class="Results"></div>
 </body>
