--- a/public/homepage.html
+++ b/public/homepage.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Roomies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="materialize-css\dist\css\materialize.min.css" media="screen,projection" />
+    <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+
 </head>
+
 <body class="homepagecenter">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="homepage.html">Roomies</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="homepage.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signin.html">SignIN</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signup.html">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="matches.html">matches</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="profile.html">ME</a>
+                        </li>  
+                        <li class="nav-item">
+                                <a class="nav-link" href="search.html">serch</a>
+                            </li>    
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+   
+      
+               
+
     <h1>Roomies</h1>
-    <button type="button" class="btn btn-secondary" onclick="location.href = 'signin.html'">Sign in</button> 
+    <button type="button" class="btn btn-secondary" onclick="location.href = 'signin.html'">Sign in</button>
     <button type="button" class="btn btn-secondary" onclick="location.href = 'signup.html'">Sign up</button>
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="handlebars/dist/handlebars.js"></script>
+    <script type="text/javascript" src="materialize-css\dist\js\materialize.min.js">
+     </script>
+    <script src="main.js" type="module"></script>
+
 </body>
+
 </html>
