--- a/public/search.html
+++ b/public/search.html
@@ -6,10 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Serach</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <script src="main.js"></script>
+  <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
@@ -78,7 +76,60 @@
 
     <button type="button" class="btn btn-secondary findBtn ">Find Roomies</button>
   </div>
-  <div class="Results"></div>
+
+  <h2>My Matches</h2>
+
+  <br>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="row">
+                <div class="column">
+                  <div class="card">
+                    <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
+                    <div class="container">
+                      <h2>Jane Doe</h2>
+                      <p class="title">CEO & Founder</p>
+                      <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                      <p>example@example.com</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="carousel-item">
+       
+        </div>
+        <div class="carousel-item">
+        
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+  <div class="choices">
+    <img class="checkB" src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/tick-512.png" height="38" width="38">
+    <img class="crossB" src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/cross-512.png" height="38" width="38">
+  </div>
+
+
+  <script id="users-template" type="text/x-handlebars-template">
+    {{#each users}}
+   <div>{{fullName}}</div> 
+    {{/each}}
+  </script>
+  <div class="results"></div>
+  <script src="main.js" type="module"></script>
+  <script src="jquery/dist/jquery.js"></script>
+  <script src="handlebars/dist/handlebars.js"></script>
 </body>
 
 </html>
