--- a/public/search.html
+++ b/public/search.html
@@ -2,12 +2,9 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Serach</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <title>Serach</title>
 </head>
 
 <body>
@@ -77,69 +74,43 @@
     <button type="button" class="btn btn-secondary findBtn ">Find Roomies</button>
   </div>
 
+
   <h2>My Matches</h2>
 
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
-              <div class="container">
-                <h2>Jane Doe</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
-              <div class="container">
-                <h2>Jane Doe</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
-              <div class="container">
-                <h2>Jane Doe</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="results">
+
       </div>
       <a class="carousel-control-prev prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next next" href="#carouselExampleControls" role="button" data-slide="next"  >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-    </div> 
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
 
-  <div class="results"></div>
-  
-    
+
+  <script id="users-template" type="text/x-handlebars-template">
+    {{#each users}}
+    <div class="carousel-item active">
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <!-- <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%"> -->
+          <div class="container">
+
+                 <div>{{fullName}}</div> 
+          </div>
+        </div>
+      </div>
+      </div>
+     </div>
+    {{/each}}
+</script>
 
   <!-- <div class="choices">
     <img class="checkB" src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/tick-512.png" height="38" width="38">
@@ -147,11 +118,12 @@
   </div> -->
 
 
-  <script id="users-template" type="text/x-handlebars-template">
+  <!-- <script id="users-template" type="text/x-handlebars-template">
     {{#each users}}
    <div>{{fullName}}</div> 
     {{/each}}
-  </script>
+  </script> -->
+
   <script src="jquery/dist/jquery.js"></script>
   <script src="handlebars/dist/handlebars.js"></script>
   <script type="text/javascript" src="materialize-css\dist\js\materialize.min.js"></script>
