--- a/public/search.html
+++ b/public/search.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -77,8 +76,9 @@
     <button type="button" class="btn btn-secondary findBtn ">Find Roomies</button>
   </div>
 
+  <div class="matches">
   <h2>My Matches</h2>
-
+  
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -87,45 +87,38 @@
             <div class="card">
               <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
               <div class="container">
-                <h2>Jane Doe</h2>
+                <h2>Swipe right to find some matches!!</h2>
                 <p class="title">CEO & Founder</p>
                 <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                 <p>example@example.com</p>
+                <div class="checkboxes">
+                    <img src="images/pet-yes.png" style="width:30%">
+                    <img src="images/smoker.png" style="width:30%">
+                    <img src="images/host-yes.png" style="width:30%">
+                  </div>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
-              <div class="container">
-                <h2>Jane Doe</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
+                <div class="container">
+                  <h2>Jane Doe</h2>
+                  <p class="title">CEO & Founder</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>example@example.com</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
-              <div class="container">
-                <h2>Jane Doe</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
-              </div>
-            </div>
-          </div>
+        <div class="results">
         </div>
-      </div>
+      
       <a class="carousel-control-prev prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -136,8 +129,40 @@
         </a>
     </div> 
   </div>
+</div>
 
-  <div class="results"></div>
+
+<script id="users-template" type="text/x-handlebars-template">
+  {{#each users}}
+  <div data-id="{{_id}}" class="carousel-item">
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="{{photo}}" alt="Jane" style="width:100%">
+          <div class="container">
+            <h2>{{fullName}}</h2>
+            <p class="title">CEO & Founder</p>
+            <p>Hi! I'm {{age}} years old, looking for houses in {{wantedLocation}}. I'm a {{proffession}}, and i like to {{hobbies}}.
+              I love listening to {{music}}. The most I'd spend on rent is ${{maxrent}}</p>
+            <p>email: {{email}} | phone: {{phone}}</p>
+            <div class="checkboxes">
+            {{#if pets}}
+            <img src="images/pet-yes.png">
+            {{/if}}
+            {{#if smoker}}
+            <img src="images/smoker.png">
+            {{/if}}
+            {{#if host}}
+            <img src="images/host-yes.png">
+            {{/if}}
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{/each}}
+  </script>
   
     
 
@@ -147,14 +172,10 @@
   </div> -->
 
 
-  <script id="users-template" type="text/x-handlebars-template">
-    {{#each users}}
-   <div>{{fullName}}</div> 
-    {{/each}}
-  </script>
+  
   <script src="jquery/dist/jquery.js"></script>
   <script src="handlebars/dist/handlebars.js"></script>
-  <script type="text/javascript" src="materialize-css\dist\js\materialize.min.js"></script>
+  <!-- <script type="text/javascript" src="materialize-css\dist\js\materialize.min.js"></script> -->
   <script type="text/javascript" src="bootstrap\dist\js\bootstrap.js"></script>
   <script src="main.js" type="module"></script>
 </body>
