--- a/public/homepage.html
+++ b/public/homepage.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="signup.html">Signup</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="matches.html">matches</a>
+                        <a class="nav-link NavMatches" href="matches.html">matches</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link" href="profile.html">ME</a>
