--- a/public/signup2.html
+++ b/public/signup2.html
@@ -10,6 +10,12 @@
 <body>
 <form class="sign-up-2">
   <div class="sign-up2">
+      <h1>Set up your User!</h1>
+      <p>Full Name: </p><input class="name" type="text" placeholder="Name..">
+      <p>Password: </p><input class="pass" type="text" placeholder="Password..">
+      <p>Verify Password: </p><input class="verify-pass" type="text" >
+      <p>Email: </p><input class="email" type="text" >
+      
     <h1>Survey!</h1>
     <p>Age: </p><input class="age" type="text" >
     <p>Gender: </p><select class="gender">
@@ -56,9 +62,8 @@
     <p>Where do you like to hang out on your free time? </p><input class="hang" type="text" >
     <p>What are your favorite bands/singers/music genres? </p><input class="music" type="text" >
     <p>What else would you like us to know about you? </p><input class="about" type="text" ><br>
-    <a href="homepage.html">
+   
             <button type="button" class="btn btn-sm add-user">Save</button>
-        </a>
   </div>
 </form>
 <script src="jquery/dist/jquery.js"></script>
