--- a/public/matches.html
+++ b/public/matches.html
@@ -6,27 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="materialize-css\dist\css\materialize.min.css" media="screen,projection" />
     <link href="bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-
 </head>
 
 <body>
     <h2>Matches</h2>
 
 
-    <div class="container">
+    <div class="matchescontainer">
             <div class="matchesRes">  </div>
     </div>
-
-    
 
     <script id="matches-template" type="text/x-handlebars-template">
             {{#each matches}}
               {{#each  offerer}}
                <div class="row  valign-wrapper">
                     <div class="col s12 m9 l8">
-                        <div class="card grey lighten-5 hoverable">
+                        <div class="card grey lighten-5 hoverable match" data-id="{{_id}}: {{this}}">
                             <div class="row  valign-wrapper">
                                 <div class="card-image col s1 m1 l2">
                                     <i class="medium material-icons">account_circle</i>
@@ -51,9 +49,9 @@
                {{/each}}
             {{/each}}
     </script>
+    <script type="text/javascript" src="materialize-css\dist\js\materialize.min.js"></script> 
     <script src="jquery/dist/jquery.js"></script>
     <script src="handlebars/dist/handlebars.js"></script>
-    <script src="main.js"></script>
     <script type="text/javascript" src="bootstrap\dist\js\bootstrap.js"></script>
     <script src="main.js" type="module"></script>
 </body>
