--- a/public/signup.html
+++ b/public/signup.html
@@ -10,14 +10,14 @@
 <body>
 <form class="sign-up-1">
   <div class="sign-up">
-    <h1>Set up your User!</h1>
+    <!-- <h1>Set up your User!</h1>
     <p>Full Name: </p><input class="name" type="text" placeholder="Name..">
     <p>Password: </p><input class="pass" type="text" placeholder="Password..">
     <p>Verify Password: </p><input class="verify-pass" type="text" >
     <p>Email: </p><input class="email" type="text" >
     <a href="signup2.html">
         <button type="button" class="btn btn-sm move-to-signup2">Next</button>
-    </a>
+    </a> -->
     
   </div>
 </form>
